# ethtool-snmpd

./: .gitignore  .travis.yml  ETHTOOL-MIB  Makefile.am  README.md  configure.ac
.github/workflows/: ci.yml  tests.yml
m4/: ethtool.m4  snmp.m4
src/: Makefile.am  ethtool-snmpd.h  ethtool-stats.c  log.c  main.c  oidmap.c
